syntax = "proto2";

package tagset.dep_labels.de;
enum Tag {
  UNKNOWN_LABEL = 0;
  acl = 1;
  acl_relcl = 2;
  advcl = 3;
  advmod = 4;
  amod = 5;
  appos = 6;
  aux = 7;
  aux_pass = 8;
  case = 9;
  cc = 10;
  ccomp = 11;
  compound = 12;
  compound_prt = 13;
  conj = 14;
  cop = 15;
  csubj = 16;
  csubj_pass = 17;
  dep = 18;
  det = 19;
  det_poss = 20;
  discourse = 21;
  expl = 22;
  expl_pv = 23;
  fixed = 24;
  flat = 25;
  goeswith = 26;
  iobj = 27;
  mark = 28;
  nmod = 29;
  nmod_poss = 30;
  nsubj = 31;
  nsubj_pass = 32;
  nummod = 33;
  obj = 34;
  obl = 35;
  obl_agent = 36;
  orphan = 37;
  parataxis = 38;
  punct = 39;
  reparandum = 40;
  root = 41;
  vocative = 42;
  xcomp = 43;
  obl_tmod = 44;
  TOP = 45;
}