syntax = "proto2";

package tagset.dep_labels.zh;
enum Tag {
  UNKNOWN_LABEL = 0;
  acl = 1;
  acl_relcl = 2;
  advcl = 3;
  advmod = 4;
  obl_agent = 5;
  amod = 6;
  appos = 7;
  aux = 8;
  aux_pass = 9;
  case = 10;
  case_loc = 11;
  cc = 12;
  ccomp = 13;
  clf = 14;
  compound = 15;
  compound_ext = 16;
  conj = 17;
  cop = 18;
  csubj = 19;
  csubj_pass = 20;
  dep = 21;
  det = 22;
  discourse = 23;
  discourse_sp = 24;
  dislocated = 25;
  fixed = 26;
  flat = 27;
  flat_foreign = 28;
  flat_name = 29;
  iobj = 30;
  mark = 31;
  mark_adv = 32;
  mark_prt = 33;
  mark_rel = 34;
  nmod = 35;
  nmod_tmod = 36;
  nsubj = 37;
  nsubj_pass = 38;
  nummod = 39;
  obj = 40;
  obl = 41;
  obl_patient = 42;
  obl_tmod = 43;
  orphan = 44;
  parataxis = 45;
  punct = 46;
  reparandum = 47;
  root = 48;
  vocative = 49;
  xcomp = 50;
  TOP = 51;
}